Upload Video Stream blob file to s3 bucket with proper file name conviction and hls format - Used Virtual Threads